[package]
name = "anti-apophis-wristwatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_ecs_ldtk = "0.4"
bevy_rapier2d = "0.16"
bevy_asset_loader = { version = "0.12", features = ["stageless"] }
iyes_loopless = "0.7"
bevy_kira_audio = { version = "0.12", features = ["wav"] }

[target.wasm32-unknown-unknown.dependencies]
bevy_ecs_ldtk = { version = "0.4", features = ["atlas"] }
